<resources>
    <string name="app_name">MenuProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. </string>
    <string name="action_help"> Help  </string>
    <string name="sms">SMS</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="new_act_greeting">Hello Anna Spreitzer</string>
    <string name="new_activity">new activity</string>
    <string name="web">WEB</string>
    <string name="phone">Phone</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
</resources>